changes in the website cosmetics.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1">  --> 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   </style>
 </head>  
 
@@ -54,23 +55,23 @@
                 </font>
               </p>
               <p style="margin-top: 4px;">
-                <font size="3.5">
+                <font size="4">
                 rishubhp@iisc.ac.in
                 </font>
               </p>
-              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300" > 
+              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 400" > 
               I am a fourth year PhD student at IISc Bangalore, advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a>.
-              Prior to my Ph.D., I ga ined industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation. 
+              Prior to my Ph.D., I gained industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation. 
               I obtained BTech from IIT Delhi in Mathematics and Computing, where I worked with Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
               </p>
-              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 300"> 
+              <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 400"> 
               I work on developing methods to enhance controllability in vision generative models, by designing interfaces beyond text to interact with these models.
               </p>
               <p style="text-align:left">
-                <a href="https://scholar.google.com/citations?user=RaRoJFYAAAAJ&hl=en">[Google Scholar]</a>
-                <a href="data/rishubh_parihar_cv.pdf">[CV]</a>
-                <a href="https://www.linkedin.com/in/rishubh-parihar?originalSubdomain=in">[Linkedin]</a>
-                <a href="https://www.linkedin.com/in/rishubh-parihar?originalSubdomain=in">[X]</a>
+                <a href="https://scholar.google.com/citations?user=RaRoJFYAAAAJ&hl=en"><strong>[Google Scholar]</strong></a>
+                <a href="data/rishubh_parihar_cv.pdf"><strong>[CV]</strong></a>
+                <a href="https://www.linkedin.com/in/rishubh-parihar?originalSubdomain=in"><strong>[Linkedin]</strong></a>
+                <a href="https://www.linkedin.com/in/rishubh-parihar?originalSubdomain=in"><strong>[X]</strong></a>
               </p>
             </td>
             <td style="padding-top:3%;padding-bottom:3%;padding-left:3%;width:40%;max-width:40%;">
@@ -91,7 +92,8 @@
                 <font size="5">Recent News</font>
               </p>
               <ul>
-		<li> <font color="#888888">[Feb 25]</font>   <a href="https://rishubhpar.github.io">Compass Control</a> and <a href="https://rishubhpar.github.io">MonoPlace3D</a> accepted at <strong>CVPR 2025</strong>!! </li>
+                <li> <font color="#888888">[Apr 25]</font>   I was awarded the best presentation award at <a href="https://eecs.iisc.ac.in/EECS2025/">IISc EECS Symposium 2025</a>, Visual Analytics Cluster. </li> 
+		            <li> <font color="#888888">[Feb 25]</font>   <a href="https://rishubhpar.github.io">Compass Control</a> and <a href="https://rishubhpar.github.io">MonoPlace3D</a> accepted at <strong>CVPR 2025</strong>!! </li>
                 <li> <font color="#888888">[Nov 24]</font>   Our ECCV 2024 paper <a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a> on personlization of T2I models was featured in <a href="https://timesofindia.indiatimes.com/science/dream-to-reality-iisc-system-can-bring-photos-to-life-change-its-context/articleshow/114796003.cms">Times of India</a>. </li>
                 <li> <font color="#888888">[Nov 24]</font>   Our work on generating consistent mirror reflections (<a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">Reflecting Reality</a>) accepted at <strong>3DV 2025</strong>. </li>
                 <li> <font color="#888888">[Aug 24]</font>   Our work on generating multiple attribute edit variations <a href="https://rishubhpar.github.io/">AttributeDiffusion</a> accepted at <strong>WACV 2025</strong>. </li>
@@ -121,7 +123,7 @@
 
 
           <td>
-            <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
+            <p style="padding-bottom:0px; margin-bottom: 0px; margin-top: 0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 300">
               <font size="5">
               2025
               </font>
@@ -131,8 +133,8 @@
 
           <!-- MonoPlace3D -->
           <tr onmouseout="monoplace3D_stop()" onmouseover="monoplace3D_start()">
-            <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+            <td style="padding-top:5px;padding-bottom:20;width:20%;vertical-align:middle">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='monoplace_image'>
                   <img class="rounded-image" src='images/mono-place-before.png' width="200"></div>
                   <img class="rounded-image" src='images/mono-place-after.png' width="200">
@@ -170,7 +172,7 @@
           <!-- CompassControl -->
           <tr onmouseout="compass_stop()" onmouseover="compass_start()">
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+              <div class="one" style="padding-left:20px">
                 <div class="two" id='compass_image'>
                   <img class="rounded-image" src='images/compass-c-before.png' width="140"></div>
                   <img class="rounded-image" src='images/compass-c-after.gif' width="140">
@@ -206,7 +208,7 @@
           <!-- Reflecting Reality --> 
           <tr onmouseout="reflectreal_stop()" onmouseover="reflectreal_start()">
             <td style="padding-top:20px;padding-bottom:20px;width:20%;vertical-align:middle">
-              <div class="one">
+              <div class="one" style="padding-left:20px">
                 <div class="two" id='reflectreal_image'>
                   <img class="rounded-image" src='images/reflecting-reality-after.png' width="140"></div>
                   <img class="rounded-image" src='images/reflecting-reality-before.png' width="140"> 
@@ -234,18 +236,17 @@
                 R Venkatesh Babu
                 <br>
                 <span class="conf-name-text"><strong>3DV 2025</strong></span>
-	            <br>
+	              <br>
                 <a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">[project page]</a> 
                 <a href="https://arxiv.org/abs/2409.14677">[paper]</a> 
-                <br> 
               </div>
             </td>
           </tr>		
 
           <!-- Attribute Diffusion --> 
           <tr onmouseout="attributediff_stop()" onmouseover="attributediff_start()">
-            <td style="padding-top:20px;padding-bottom:20px;width:20%;vertical-align:middle">
-              <div class="one">
+            <td style="padding-top:10px;padding-bottom:20px;width:20%;vertical-align:middle">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='attributediff_image'>
                   <img class="rounded-image" src='images/attributediff_after.gif' width="140"></div>
                   <img class="rounded-image" src='images/attributediff_before.gif' width="140"> 
@@ -278,7 +279,6 @@
 	            <br>
               <a href="https://rishubhpar.github.io/attributediffusion/">[project page]</a>
               <a href="https://openaccess.thecvf.com/content/WACV2025/papers/Parihar_Attribute_Diffusion_Diffusion_Driven_Diverse_Attribute_Editing_WACV_2025_paper.pdf">[paper]</a> 
-              <br> 
               </div>
             </td>
           </tr>		  
@@ -295,7 +295,7 @@
           <!-- Precise Control -->
           <tr onmouseout="precise_stop()" onmouseover="precise_start()">
           <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+            <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='pc_image'>
                   <img class="rounded-image" src='images/precise-ctrl-before.png' width="140"></div>
                   <img class="rounded-image" src='images/precise-ctrl-after.png' width="140">
@@ -337,7 +337,7 @@
           <!-- Text2Place -->
           <tr onmouseout="text2place_stop()" onmouseover="text2place_start()">
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='personscene_image'>
                   <img class="rounded-image" src='images/person-scene-before.png' width="140"></div>
                   <img class="rounded-image" src='images/person-scene-after.png' width="140">
@@ -376,7 +376,7 @@
           <!-- BalancingAct -->
           <tr onmouseout="balance_stop()" onmouseover="balance_start()">
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='balanceAct_image'>
                   <img class="rounded-image" src='images/balancingAct-before.png' width="140"></div>
                   <img class="rounded-image" src='images/balancingAct-after.png' width="140">
@@ -428,7 +428,7 @@
           <!-- StrataNerF paper -->
           <tr onmouseout="strata_stop()" onmouseover="strata_start()">
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='stratan_image'>
                   <img class="rounded-image" src='images/stratan_after.gif' width="140"></div>
                   <img class="rounded-image" src='images/stratan_before.gif' width="140">
@@ -471,7 +471,7 @@
           <!-- Motion Style paper -->
           <tr onmouseout="motion_stop()" onmouseover="motion_start()">
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:bottom">
-              <div class="one">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='motion_image'>
                   <img class="rounded-image" src='images/motion_style_after.gif' width="140"></div>
                 <img class="rounded-image" src='images/motion_style_before.gif' width="140">  
@@ -520,7 +520,7 @@
           <!-- FLAME paper -->
           <tr onmouseout="flame_stop()" onmouseover="flame_start()">
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='flame_image'>
                   <img class="rounded-image" src='images/flame_before.gif' width="140"></div>
                   <img class="rounded-image" src='images/flame_after.gif' width="140">
@@ -561,7 +561,7 @@
           <!-- HSR Paper --> 
           <tr onmouseout="hsr_stop()" onmouseover="hsr_start()">
             <td style="padding-top:20;padding-bottom:20;width:20%;vertical-align:middle">
-              <div class="one">
+              <div class="one" style="margin-bottom:20px;padding-left:20px">
                 <div class="two" id='hsr_image'>
                   <img class="rounded-image" src='images/hsr_before.png' width="140"></div>
                 <img class="rounded-image" src='images/hsr_after.png' width="140">
@@ -621,11 +621,11 @@
   <tr>
     <td style="padding-top:10px; padding-bottom:10px; width:60%; vertical-align:middle">
       <p style="padding-bottom:0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
-        <span style="font-size:22px;">Reviewing</span>
+        <span style="font-size:22px">Reviewing</span>
         <br>
-        <p>
+        <p style="padding-bottom:0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
         ICCV 2025, CVPR 2025, WACV 2025, NeurIPS 2024, ECCV 2024, CVPR 2024, WACV 2024, ICCV 2023, CVPR 2023, ECCV 2022
-      </p>
+        </p>
       </p>
     <hr>
     </td>
@@ -637,7 +637,7 @@
         <span style="font-size:22px;">Teaching</span>
         <br>
         <p>
-          <p>
+          <p style="padding-bottom:0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
           <font size="3"> Deep Learning for Computer vision (DS265), IISc </font>
           <br>
           Teaching Assistant with Prof. R. Venkatesh Babu
