--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
                 </font>
               </p>
               <p style="margin-top: 4px;">
-                <font size="4">
+                <span style="font-size: 16px; color: rgb(120, 120, 120);">
+                  rishubhp@iisc.ac.in
+                </span>
+                <!-- <font size="4" color=#>
                 rishubhp@iisc.ac.in
-                </font>
+                </font> -->
               </p>
               <p style="line-height:1.4; font-family: 'Nunito', sans-serif; font-weight: 400" > 
               I am a fourth year PhD student at IISc Bangalore, advised by <a href="http://cds.iisc.ac.in/faculty/venky/">Prof. Venkatesh Babu</a>.
@@ -99,7 +102,7 @@
                 <li> <font color="#888888">[Nov 24]</font>   Our ECCV 2024 paper <a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a> on personlization of T2I models was featured in <a href="https://timesofindia.indiatimes.com/science/dream-to-reality-iisc-system-can-bring-photos-to-life-change-its-context/articleshow/114796003.cms">Times of India</a>. </li>
                 <li> <font color="#888888">[Nov 24]</font>   Our work on generating consistent mirror reflections (<a href="https://val.cds.iisc.ac.in/reflecting-reality.github.io/">Reflecting Reality</a>) accepted at <strong>3DV 2025</strong>. </li>
                 <li> <font color="#888888">[Aug 24]</font>   Our work on generating multiple attribute edit variations <a href="https://rishubhpar.github.io/">(Attribute Diffusion)</a> accepted at <strong>WACV 2025</strong>. </li>
-                <li> <font color="#888888">[Jul 24]</font>   Awarded the prestigious <a href = "https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award</a> for significant contributions towards controlling image generative models.</li>
+                <li> <font color="#888888">[Jul 24]</font>   Awarded the prestigious <a href = "https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award</a> for contributions towards controllable generative models.</li>
                 <li> <font color="#888888">[Jul 24]</font>   Our works on fine-grained attribute control in text-to-image models (<a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a>) and affordance aware human placement (<a href="https://rishubhpar.github.io/Text2Place/">Text2Place</a>) accepted at <strong>ECCV 2024</strong>. </li>
                 <li> <font color="#888888">[Jul 24]</font>   Our CVPR 2024 paper <a href="https://ab-34.github.io/balancing_act/">BalancingAct</a> on debiasing Diffusion models was featured in <a href="https://timesofindia.indiatimes.com/city/bengaluru/iisc-team-develops-method-to-reduce-bias-in-ai-images/articleshow/112119878.cms">Times of India</a>. </li>
                 <li> <font color="#888888">[Apr 24]</font>   Gave a talk on PreciseControl at <a href="https://eecs.iisc.ac.in/eecs-research-students-symposium-2024-2/">IISc EECS Symposium 2024</a>. </li> 
@@ -644,7 +647,7 @@
       <p style="padding-bottom:0px; text-align:left; font-family: 'Nunito', sans-serif; font-weight: 400">
         <span style="font-size:22px;">Honors</span>
         <ul>
-          <li> <a href="https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award 2024</a> for significant contributions to the mechanisms for controlling generative models.</li>
+          <li> <a href="https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/#:~:text=Prof%20Satish%20Dhawan%20Research%20Award%20was%20instituted%20by%20alumnus%20Swapnesh,focus%20on%20benefiting%20developing%20countries.">Satish Dhawan Research Award 2024</a> for contributions in controllable generative models.</li>
           <li> Best Presentation Award in Visual Cluster at <a href="https://eecs.iisc.ac.in/EECS2023/">IISc EECS Research Students Symposium 2023</a>.</li>
           <li> Best Presentation Award at Adobe-IISc Workshop 2024.</li>   
           <li> Selected for Pradhan Mantri Research Fellowship (<a href="https://www.pmrf.in/">PMRF</a>) 2021.</li>
