added some images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Rishubh Parihar">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
+	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎨</text></svg>">
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -39,22 +39,22 @@
             I spent an amazing summer at Snap Research working on controllable image editing. Prior to my Ph.D., I gained industry experience at Samsung Research, where I developed face editing solutions for Samsung smartphones, and at ShareChat, focusing on multimodal algorithms for content moderation.
           </p>
           <p class="bio">
-            I obtained B.Tech from IIT Delhi in Mathematics and Computing, where I worked with Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.
-          </p>
+              I obtained B.Tech from IIT Delhi in Mathematics and Computing, where I worked with Prof. <a href="https://www.cse.iitd.ac.in/~pkalra/">Prem Kalra</a> on synthetic makeup transfer.   
+              </p>
           <div class="social-links">
             <a href="mailto:rishubhp@iisc.ac.in">Email</a>
-            <a href="https://scholar.google.com/citations?user=RaRoJFYAAAAJ&hl=en">Google Scholar</a>
+            <a href="https://scholar.google.com/citations?user=RaRoJFYAAAAJ&hl=en">Scholar</a>
             <a href="https://www.linkedin.com/in/rishubh-parihar">LinkedIn</a>
             <a href="https://x.com/RishubhParihar">X</a>
             <a href="data/rishubh_parihar_cv.pdf">CV</a>
           </div>
         </div>
         <div class="about-image">
-          <div class="profile-container">
+              <div class="profile-container">
             <img class="profile-photo" src="images/cover_photo.gif" alt="Rishubh Parihar">
           </div>
         </div>
-      </div>
+              </div>
 
       <div class="section">
         <h2>Recent News</h2>
@@ -71,7 +71,7 @@
           <li><span class="date">[Aug 24]</span> Our work on generating multiple attribute edit variations (<a href="https://rishubhpar.github.io/attributediffusion/">Attribute Diffusion</a>) accepted at <strong>WACV 2025</strong>.</li>
           <li><span class="date">[Jul 24]</span> Awarded the prestigious <a href="https://odaa.iisc.ac.in/prof-satish-dhawan-research-award/">Satish Dhawan Research Award</a> for contributions towards controllable generative models.</li>
           <li><span class="date">[Jul 24]</span> Our works on fine-grained attribute control (<a href="https://rishubhpar.github.io/PreciseControl.home/">PreciseControl</a>) and affordance aware human placement (<a href="https://rishubhpar.github.io/Text2Place/">Text2Place</a>) accepted at <strong>ECCV 2024</strong>.</li>
-        </ul>
+              </ul>
         <button class="read-more-btn" id="read-more-btn" onclick="toggleNews()">
           <span id="read-more-text">Read more</span>
           <span class="arrow" id="arrow">↓</span>
@@ -152,7 +152,7 @@
               <a href="https://github.com/val-iisc/Reflecting-Reality">Code</a>
             </div>
           </div>
-        </div>
+              </div>
 
         <div class="paper-item">
           <div class="paper-image">
@@ -169,7 +169,7 @@
             </div>
           </div>
         </div>
-      </div>
+              </div>
 
       <div class="year-section">
         <h2 class="year-title">2024</h2>
@@ -191,7 +191,7 @@
               <a href="https://timesofindia.indiatimes.com/science/dream-to-reality-iisc-system-can-bring-photos-to-life-change-its-context/articleshow/114796003.cms">News</a>
             </div>
           </div>
-        </div>
+              </div>
 
         <div class="paper-item">
           <div class="paper-image">
@@ -207,14 +207,14 @@
               <a href="https://arxiv.org/pdf/2407.15446v1">Paper</a>
               <a href="https://github.com/Harsh-Gupta9897/Text2Place">Code</a>
             </div>
-          </div>
-        </div>
+              </div>
+              </div>
 
         <div class="paper-item">
           <div class="paper-image">
             <img class="img-before" src="images/balancingAct-before.png" alt="BalancingAct">
             <img class="img-after" src="images/balancingAct-after.png" alt="BalancingAct">
-          </div>
+              </div>
           <div class="paper-info">
             <h3 class="paper-title">Balancing Act: Distribution-Guided Debiasing in Diffusion Models</h3>
             <p class="paper-authors"><strong>Rishubh Parihar*</strong>, Abhijnya Bhat*, Saswat Mallick, Abhipsa Basu, Jogendra Nath Kundu, R. Venkatesh Babu</p>
@@ -224,10 +224,10 @@
               <a href="https://arxiv.org/abs/2402.18206">Paper</a>
               <a href="https://github.com/rishubhpar/debiasing_gen_models">Code</a>
               <a href="https://timesofindia.indiatimes.com/city/bengaluru/iisc-team-develops-method-to-reduce-bias-in-ai-images/articleshow/112119878.cms">News</a>
-            </div>
-          </div>
-        </div>
-      </div>
+              </div>
+              </div>
+              </div>
+              </div>
 
       <div class="year-section">
         <h2 class="year-title">2023</h2>
@@ -247,7 +247,7 @@
               <a href="https://github.com/ankitatiisc/Strata-NeRF">Code</a>
             </div>
           </div>
-        </div>
+              </div>
 
         <div class="paper-item">
           <div class="paper-image">
@@ -263,9 +263,9 @@
               <a href="https://arxiv.org/abs/2306.00559">Paper</a>
               <a href="https://youtu.be/ngqXK5VJGzo">Video</a>
             </div>
-          </div>
-        </div>
-      </div>
+              </div>
+              </div>
+              </div>
 
       <div class="year-section">
         <h2 class="year-title">2022</h2>
@@ -274,7 +274,7 @@
           <div class="paper-image">
             <img class="img-before" src="images/flame_before.gif" alt="FLAME">
             <img class="img-after" src="images/flame_after.gif" alt="FLAME">
-          </div>
+              </div>
           <div class="paper-info">
             <h3 class="paper-title">Everything is in the Latent Space: Attribute Style Editing and Attribute Style Manipulation by StyleGAN Latent Space Exploration</h3>
             <p class="paper-authors"><strong>Rishubh Parihar</strong>, Ankit Dhiman, Tejan Karmali, R. Venkatesh Babu</p>
@@ -283,9 +283,9 @@
               <a href="https://sites.google.com/view/flamelatentediting/">Project Page</a>
               <a href="https://arxiv.org/abs/2207.09855">Paper</a>
               <a href="https://drive.google.com/file/d/1LgKowoYnaJ5sX5TAI7heGOLhGkTbZ5qS/view">Video</a>
-            </div>
-          </div>
-        </div>
+              </div>
+              </div>
+              </div>
 
         <div class="paper-item">
           <div class="paper-image">
@@ -299,52 +299,51 @@
             <div class="paper-links">
               <a href="https://sites.google.com/view/hsr-eccv22/">Project Page</a>
               <a href="https://arxiv.org/abs/2208.03764">Paper</a>
-            </div>
-          </div>
-        </div>
-      </div>
+              </div>
+              </div>
+              </div>
+              </div>
     </section>
 
     <!-- Art/Photography Section -->
     <section id="art" class="tab-content">
-      <h1>Art & Photography</h1>
-      <p class="art-intro">A collection of my creative work including sketches and photography.</p>
+      <h1>Art & Photography</h1> 
       
       <div class="gallery-section">
         <h2>Photography</h2>
         <div class="gallery-grid">
-          <div class="gallery-item placeholder">
-            <div class="placeholder-content">
-              <span>Photo 1</span>
-            </div>
+          <div class="gallery-item wide" onclick="openLightbox('images/image2.jpeg')">
+            <img src="images/image2.jpeg" alt="Photo 2">
           </div>
-          <div class="gallery-item placeholder">
-            <div class="placeholder-content">
-              <span>Photo 2</span>
-            </div>
+          <div class="gallery-item" onclick="openLightbox('images/image4.jpeg')">
+            <img src="images/image4.jpeg" alt="Photo 4">
           </div>
-          <div class="gallery-item placeholder">
-            <div class="placeholder-content">
-              <span>Photo 3</span>
-            </div>
+          <div class="gallery-item wide" onclick="openLightbox('images/image3.jpeg')">
+            <img src="images/image3.jpeg" alt="Photo 3">
           </div>
-          <div class="gallery-item placeholder">
-            <div class="placeholder-content">
-              <span>Photo 4</span>
-            </div>
+          <div class="gallery-item" onclick="openLightbox('images/image6.jpeg')">
+            <img src="images/image6.jpeg" alt="Photo 6">
           </div>
-          <div class="gallery-item placeholder">
-            <div class="placeholder-content">
-              <span>Photo 5</span>
-            </div>
+          <div class="gallery-item wide" onclick="openLightbox('images/image6.JPG')">
+            <img src="images/image6.JPG" alt="Photo">
           </div>
-          <div class="gallery-item placeholder">
-            <div class="placeholder-content">
-              <span>Photo 6</span>
-            </div>
+          <div class="gallery-item" onclick="openLightbox('images/image8.jpeg')">
+            <img src="images/image8.jpeg" alt="Photo 8">
+          </div>
+          <div class="gallery-item wide" onclick="openLightbox('images/image9.jpeg')">
+            <img src="images/image9.jpeg" alt="Photo 9">
+          </div>
+          <div class="gallery-item" onclick="openLightbox('images/image10.jpeg')">
+            <img src="images/image10.jpeg" alt="Photo 10">
+          </div>
+          <div class="gallery-item" onclick="openLightbox('images/image13.jpeg')">
+            <img src="images/image13.jpeg" alt="Photo 13">
+          </div>
+          <div class="gallery-item" onclick="openLightbox('images/image14.JPG')">
+            <img src="images/image14.JPG" alt="Photo 14">
           </div>
         </div>
-      </div>
+              </div>
 
       <div class="gallery-section">
         <h2>Sketches</h2>
@@ -371,7 +370,7 @@
             <img src="images/sketch8.png" alt="Sketch 8">
           </div>
         </div>
-      </div>
+              </div>
     </section>
 
   </main>
