changed layout with minor modifications

--- a/index.html
+++ b/index.html
@@ -306,10 +306,9 @@
     </section>
 
     <!-- Art/Photography Section -->
-    <section id="art" class="tab-content">
-      <h1>Art & Photography</h1> 
+    <section id="art" class="tab-content"></section>
       
-      <div class="gallery-section">
+      <div class="gallery-section photography-section">
         <h2>Photography</h2>
         <div class="gallery-grid">
           <div class="gallery-item wide" onclick="openLightbox('images/image2.jpeg')">
@@ -345,7 +344,7 @@
         </div>
               </div>
 
-      <div class="gallery-section">
+      <div class="gallery-section sketches-section">
         <h2>Sketches</h2>
         <div class="gallery-grid">
           <div class="gallery-item" onclick="openLightbox('images/sketch2.jpg')">
